@@ -3,3 +3,5 @@ Account Invoice Stock Module
 
 The account invoice stock module adds link between invoice lines and stock
 moves.
+The unit price of the stock move is updated with the average price of the
+posted invoice lines that are linked to it.
