@@ -1,3 +1,5 @@
+* Update unit price of stock moves based on posted invoice lines
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Keep stock moves when crediting an invoice
